# kolibri-installer-gnome

./: .bumpversion.cfg  .bumpversion.toml  .editorconfig  .pre-commit-config.yaml  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml  update.yaml
build-aux/flatpak/: cli.py  org.learningequality.Kolibri.Devel.json  python3-kolibri.json  server.py
build-aux/flatpak/modules/: python3-kolibri-pytz.json  python3-kolibri.json
data/: meson.build  org.learningequality.Kolibri.gresource.xml.in
data/applications/: org.learningequality.Kolibri.Frontend.desktop.in.in  org.learningequality.Kolibri.Launcher.desktop.in
data/css/: style-dark.css  style.css
data/icons/: meson.build
data/metainfo/: meson.build  org.learningequality.Kolibri.metainfo.xml.in.in
po/: POTFILES.in  ar.po  bg.po  bn.po  en.po  es.po  es_ES.po  fa.po  fr.po  fv.po  gu_IN.po  hi.po  it.po  ko.po  kolibri-gnome.pot  la.po  mr.po  my.po  ny.po  pt_BR.po  sw_TZ.po  te.po  tl.po  ur_PK.po  vi.po  yo.po
src/: meson.build
src/kolibri_app/: config.py.in  globals.py  utils.py
src/kolibri_daemon/: application.py  dbus_helpers.py  desktop_users.py  kolibri-daemon.c  kolibri_app_interface.py  kolibri_http_process.py  kolibri_search_handler.py  kolibri_service_context.py  kolibri_service_manager.py  kolibri_utils.py  main.py  meson.build  utils.py
src/kolibri_daemon/kolibri_service/: setup_process.py
src/kolibri_gnome/: application.py  config.py.in  dbus_utils.py  kolibri_context.py  kolibri_daemon_manager.py  kolibri_daemon_proxy.py  kolibri_setup_dialog.py  kolibri_webview.py  kolibri_window.py  meson.build  utils.py
src/kolibri_gnome/desktop/: application.py
src/kolibri_gnome/desktop_launcher/: application.py  kolibri_service_monitor.py  main.py
src/kolibri_gnome/kolibri_daemon/: application.py  kolibri_search_handler.py  kolibri_service.py  kolibri_service_main.py  kolibri_service_setup.py
src/kolibri_gnome/kolibri_service/: content_extensions.py  kolibri_service_main.py  kolibri_wrapper.py
src/kolibri_gnome/launcher/: application.py
src/kolibri_gnome_launcher/: application.py  meson.build
src/kolibri_gnome_search_provider/: kolibri-gnome-search-provider-application.c  kolibri-gnome-search-provider.c  kolibri-task-multiplexer.h  meson.build
src/libkolibri_daemon_dbus/: kolibri-daemon-dbus-utils.c  meson.build  org.learningequality.Kolibri.Daemon.xml
